--- a/back/package.json
+++ b/back/package.json
@@ -23,6 +23,8 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.3",
     "mongoose-unique-validator": "^3.1.0",
